styles.css
/* General Styles
************************** */

html {
    box-sizing: border-box;
  }
  *, *:before, *:after {
    box-sizing: inherit;
  }

body {
    margin: 0;
    padding: 0;
    font-family: 'Poppins', sans-serif;
    font-weight: 400;
    font-size: 20px;
    line-height: 28px;
}

/* Header Styles
************************** */

.logo {
    font-weight: 700;
    font-size: 0.9rem;
    line-height: 20px;
    color: #6070FF;
}

.navbar {
    width: 80%;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
}

.navbar nav {
    font-weight: 500;
    font-size: 0.75rem;
    line-height: 20px;
    color: #344563;
}

.social {
    margin: 0;
    padding: 0;
}

nav li {
    padding: 0 15px;
}

nav a {
    text-decoration: none;
}

nav li,
.social li {
    display: inline-block;
    list-style-type: none;
    margin: 0;
}

.social li {
    margin-right: 20px;
}

h1 {
    font-size: 2.4rem;
    font-weight: 700;
    line-height: 60px;
    color: #091E42;
}

h1 + p {
    color: #344563;
}

.navbar,
.name,
.glad,
h1 + p::first-letter {
    text-transform: capitalize;
}

.connect {
    font-size: 0.8rem;
    font-weight: 500;
    line-height: 24px;
    text-transform: uppercase;
    color: #7F8CFF;
}

.intro {
    background: no-repeat center/90% url(graphics/header-bg.svg);
    height: 100vh;
}

.flex-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 69%;
    height: 100vh;
    margin: 0 auto;
}

